--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="project">
                 <h3>Project 1: Simon Game</h3>
                 <p>Project uses HTML and CSS</p>
-                <a href="index.html" target="_blank">Explore Project</a>
+                <a href="jack.html" target="_blank">Explore Project</a>
             </div>
             <div class="project">
                 <h3>Project 2:TIC_TAC_TOE game </h3>
